syntax = "proto3";

option csharp_namespace = "OzonEdu.StockApi.Grpc";
package StockApi;

import "google/protobuf/empty.proto"; 
import "google/protobuf/wrappers.proto";

service StockApiGrpc{
	rpc GetAllStockItems(GetAllStockItemsRequest) returns (GetAllStockItemsResponse);
	rpc GetAllStockItemsV2(google.protobuf.Empty) returns (GetAllStockItemsResponse);	
	rpc GetAllStockItemsWithNulls(google.protobuf.Empty) returns (GetAllStockItemsWithNullsResponse);	
	rpc GetAllStockItemsMap(GetAllStockItemsRequest) returns (GetAllStockItemsMapResponse);

	rpc GetAllStockItemsStream(GetAllStockItemsRequest) returns (stream GetAllStockItemsResponseUnit);

	rpc AddStockItem (AddStockItemRequest) returns (google.protobuf.Empty);

	rpc AddStockItemStreaming (stream AddStockItemRequest) returns (google.protobuf.Empty);
}

message GetAllStockItemsRequest{}

message GetAllStockItemsResponse{
	repeated GetAllStockItemsResponseUnit stocks = 1;
}

message GetAllStockItemsResponseUnit{
	int64 item_id = 1;
	string item_name = 2;
	int32 quantity = 3;
}

message GetAllStockItemsWithNullsResponse{
	repeated GetAllStockItemsWithNullResponseUnit stocks = 1;
}

message GetAllStockItemsWithNullResponseUnit{
	int64 item_id = 1;
	google.protobuf.StringValue item_name = 2;
	google.protobuf.Int32Value quantity = 3;
}

message GetAllStockItemsMapResponse {
	map<int64,GetAllStockItemsResponseUnit> stocks = 1;
}

message AddStockItemRequest{
	string item_name = 1;
	int32 quantity = 2;
}

enum StockType{
	None = 0;
	T_SHIRT = 1;
	SHOES = 2;
}